# tessio

./: .dockerignore  .env.aio.example  .env.example  .env.production.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSING.md  NOTICE  README.md  SECURITY.md  compose.aio.yaml  compose.yaml  docker-compose.yml  eslint.config.js  install.sh  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  docs.yml  helm.yml  release-images.yml
agent/: Cargo.toml  README.md
agent/src/: client.rs  config.rs  enroll.rs  main.rs  model.rs  scheduler.rs  service.rs
agent/src/collectors/: common.rs  linux.rs  macos.rs  mod.rs  windows.rs
apps/api/: package.json  tsconfig.json  tsup.config.ts
apps/api/src/: app.test.ts  app.ts  (+11 more)
apps/landing/: README.md  index.html  package.json  tsconfig.json  wrangler.jsonc
apps/runner/: package.json
apps/web/: .env.example  Caddyfile  index.html  package.json  vite.config.ts  vitest.setup.ts
apps/worker/: package.json  vitest.config.ts  vitest.integration.config.ts
deploy/aio/: Caddyfile  tessio-migrate
docs/legal/: CLA.md
docs/manual/: ai-privacy.md  configuration.md  getting-started.md  index.md
ee/: LICENSE
ee/license-server/: package.json
ee/server/: package.json  vitest.config.ts  vitest.integration.config.ts
ee/web/: package.json
scripts/: migrate-entrypoint.sh  smoke-aio.sh  smoke-compose.sh
(+441 files in other folders)
