[package]
name = "tessio-agent"
version = "0.1.0"
edition = "2021"
description = "Tessio endpoint agent — collects CMDB inventory and reports it to a Tessio instance."
license = "Elastic-2.0"

[[bin]]
name = "tessio-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# rustls (not OpenSSL) keeps cross-compilation simple across the three targets.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sysinfo = "0.32"
if-addrs = "0.13"
mac_address = "1"

[target.'cfg(windows)'.dependencies]
wmi = "0.13"
winreg = "0.52"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
